Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-2177

invalid windows version check for `onXPOrLater`

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 3.2.0, 3.2.1, 3.2.2
    • 3.2.3
    • Utilities
    • win10 x64

    Description

      in xerces-c-3.2.2\src\xercesc\util\Transcoders\Win32\Win32TransService.cpp:324

       

      {{ if ((OSVer.dwPlatformId == VER_PLATFORM_WIN32_NT) &&}}
      {{ ((OSVer.dwMajorVersion == 5) && (OSVer.dwMinorVersion > 0)))}}
      {{ {}}
            onXPOrLater = true;
      {{ }}}

      on win10 OSVer.dwMajorVersion = 6

      Attachments

        Activity

          People

            amassari Alberto Massari
            powerranger Vvv
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: