[XERCESC-2177] Starting with Windows Vista, the dwMajorVersion changed from 5 to 6

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1871621 13f79535-47bb-0310-9956-ffa450edef68